# Qui-Browser

./: .dockerignore  .editorconfig  .env.example  .env.stripe  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .npmignore  .prettierignore  .prettierrc  .prettierrc.json  00_README.md  00_START_HERE.md  AI_ATTRIBUTION_AND_LEGAL.md  ALL-PHASES-COMPLETE.md  API_EXTENSIONS_v5.8.0.md  BUILD_AND_DISTRIBUTION.md  BUILD_MANIFEST.txt  BUILD_OPTIMIZATION_GUIDE.md  BUILD_SUCCESS_REPORT.md  CHANGELOG.md  CI_CD_MONITORING_GUIDE.md  CODE_OF_CONDUCT.md  CODE_QUALITY_MANAGEMENT_REPORT.md  COMMERCIAL_RELEASE_SUMMARY.txt  COMMUNITY_ENGAGEMENT_STRATEGY.md  COMPLETE-IMPLEMENTATION-2025.md  COMPLETE_IMPLEMENTATION_v2.0.0.md  COMPREHENSIVE_DOCUMENTATION_REBUILD.md  COMPREHENSIVE_IMPROVEMENTS_2025.md  CONTINUOUS_IMPROVEMENT_PLAN.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONVERSATION_CONTEXT_SUMMARY.md  CONVERSATION_SUMMARY_BRIEF.md  CONVERSATION_SUMMARY_SESSION_4.md  DEEP_RESEARCH_ANALYSIS_2025.md  DEPLOYMENT-GUIDE.md  (+154 more)
.claude/: settings.local.json
.github/: CODEOWNERS  DISCUSSION_TEMPLATES.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: stripe-payment.js
assets/: test-precompressed.txt
config/: csp-presets.js  pricing.js  prometheus.yml
core/: middleware.js
data/: bookmark-folders.json  browser-settings.json  device-id.txt  session.json  settings-last-modified.json
docker/: healthcheck.sh  nginx.conf
docs/: 2025_IMPROVEMENTS.md  ADVANCED_IMPLEMENTATION_GUIDE.md  API-EXAMPLES.md  API.md  FAQ.md  (+83 more)
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
(+766 files in other folders)
