[package]
name = "qui-browser-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
] }
js-sys = "0.3"
unicode-normalization = "0.1"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]
